[project]
name = "ibis-types-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Filip Wojciechowski", email = "fwojciec@gmail.com" }
]
dependencies = [
    "ibis-framework[duckdb]>=9.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ibis_types_test"]
